--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,21 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: "Industry";
+  src: local("Industry"),
+    url("./fonts/Industry-Bold.ttf") format("truetype");
+  font-weight: bold;
+}
+
+.use__industry {
+  font-family: "Industry";
+}
+
 body {
   background-color: black;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: -apple-system, BlinkMacSystemFont, "Industry", 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
